Refactor transport compat helpers and event-bindings
Consolidate and simplify transport compatibility behavior and worker event model. Deprecated transport-global helpers (server/transportServer/websocket) now delegate to transport(...).webSocketAdapter(...) so adapter-owned server settings remain on the concrete adapter; compatibility helpers behave as thin facades over current adapter state rather than holding a cached runtime snapshot. TransportConfig no longer maintains a cached TransportRuntimeComposition; resolver methods now compute or fall back to sensible defaults (including DefaultWorkerTransportRuntimeFactory and adapter-specific bootstraps) and invalidate fewer fields. TransportRuntimeRegistry now uses a TransportRegistrationResolver to pick adapter bindings (removing legacy transportHint-family matching). Introduce WorkerEventBinding and normalize/derive legacy supportedProjects/supportedEventCodes across MassSdkApplication, MockRuntimeDataLoader and tests; MassWebSocketAdapter lifecycle updated to lazily materialize the compatibility dispatcher and not treat it as required for isRunning(). Docs and tests updated to reflect message and API changes.